k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-api
  labels:
    app: php-api
spec:
  selector:
    app: php-api
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
