k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: php-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php-api
            port:
              number: 80
